--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <tfoot>
                 <tr>
                     <th colspan='6'>
-                      <span>배송료 +4,000원</span>
+                      <span>배송료 +4,000원,</span>
                         <span> 합계</span>
                         <span id="final-price">0원</span>
                         <button id="copy_button" class="button"><div> 견적 복사하기</div></button>
